[package]
name = "alacritty-theme-switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.27.0"
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
